plugins/overview, windowview: don't handle keyboard shortcuts on Wayland

The only reason for handling them is that the effect grabs the keyboard, which disables
global shortcuts on Xorg.
In the Wayland session though, global shortcuts still work while the effects are active,
and usually that works fine, as the global shortcuts filter filters out the key press events
before they reach the effect. Modifier-only shortcuts though trigger on release, so they
don't get filtered out and the shortcut effectively gets triggered twice, once by the effect
on press, and once by kglobalacceld on release.

BUG: 493589


(cherry picked from commit ff2566562d413dc268d87b3c72fd56a6061a5d40)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>