src/plugins/overview/overvieweffect.cpp
@@ -339,29 +339,31 @@ void OverviewEffect::reverseCycle()
 
 void OverviewEffect::grabbedKeyboardEvent(QKeyEvent *keyEvent)
 {
-    if (m_cycleShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
-        if (keyEvent->type() == QEvent::KeyPress) {
-            cycle();
+    if (!effects->waylandDisplay()) {
+        if (m_cycleShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
+            if (keyEvent->type() == QEvent::KeyPress) {
+                cycle();
+            }
+            return;
         }
-        return;
-    }
-    if (m_reverseCycleShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
-        if (keyEvent->type() == QEvent::KeyPress) {
-            reverseCycle();
+        if (m_reverseCycleShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
+            if (keyEvent->type() == QEvent::KeyPress) {
+                reverseCycle();
+            }
+            return;
         }
-        return;
-    }
-    if (m_overviewShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
-        if (keyEvent->type() == QEvent::KeyPress) {
-            m_overviewState->toggle();
+        if (m_overviewShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
+            if (keyEvent->type() == QEvent::KeyPress) {
+                m_overviewState->toggle();
+            }
+            return;
         }
-        return;
-    }
-    if (m_gridShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
-        if (keyEvent->type() == QEvent::KeyPress) {
-            m_gridState->toggle();
+        if (m_gridShortcut.contains(keyEvent->key() | keyEvent->modifiers())) {
+            if (keyEvent->type() == QEvent::KeyPress) {
+                m_gridState->toggle();
+            }
+            return;
         }
-        return;
     }
     QuickSceneEffect::grabbedKeyboardEvent(keyEvent);
 }
